# rust_lambda_runtime

./: Cargo.toml  LICENSE  README.md
examples/: hello-world.rs
src/: lib.rs
