[package]
name = "rust_lambda_runtime"
version = "0.1.0"
authors = ["Josh Cole <colemangrill@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = [ "macros" ] }
http_req = "0.7.0"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
async-trait = "0.1.40"